--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@tensorflow/tfjs": "^4.1.0",
     "@tensorflow/tfjs-node": "^4.1.0",
     "@tensorflow/tfjs-vis": "^1.5.1",
+    "axios": "^1.2.2",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "openai": "^3.1.0",
     "pg": "^8.8.0",
     "puppeteer": "^19.4.1",
