--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.3.1",
     "moment": "^2.29.4",
     "openai": "^3.1.0",
     "pg": "^8.8.0",
